--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
+    "@react-navigation/stack": "^6.0.11",
     "camelize": "^1.0.0",
     "expo": "^42.0.4",
     "expo-font": "~9.2.1",
